--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             outline: 0px;
             background-color: #ffffff;
         }
+        
+        @media (max-width:600px){
+            input{width:225px;}
+        }
 
         input[type="text"]::-webkit-calendar-picker-indicator {
             background-color: #ffffff;
